<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greet"
        android:layout_marginStart="7sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7sp"
        android:text="@string/expense"
        app:layout_constraintTop_toTopOf="@id/expense"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34sp"
        android:layout_marginTop="41sp"
        android:text="@string/expense"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7sp"
        android:text="@string/savings"
        app:layout_constraintTop_toTopOf="@id/savings"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/savings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53sp"
        android:text="@string/savings"
        app:layout_constraintStart_toStartOf="@id/expense"
        app:layout_constraintTop_toBottomOf="@+id/expense" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7sp"
        android:text="@string/limit"
        app:layout_constraintTop_toTopOf="@id/limit"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58sp"
        android:text="@string/limit"
        app:layout_constraintStart_toStartOf="@+id/savings"
        app:layout_constraintTop_toBottomOf="@+id/savings" />

    <Button
        android:id="@+id/add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18sp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add" />

    <Button
        android:id="@+id/change"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>