<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUpdateGrp">


    <androidx.constraintlayout.widget.Group
        android:id="@+id/editGrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="GrpExpenseUpdateBtn,GrpExpenseDeleteBtn"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/GrpOperation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/MemberSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/GrpOperation"
        tools:listitem="@android:layout/simple_dropdown_item_1line"
        />

    <EditText
        android:id="@+id/GrpDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/a_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MemberSpinner" />

    <EditText
        android:id="@+id/GrpPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/a_expense"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GrpDescription" />

    <Button
        android:id="@+id/GrpExpenseAddBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/GrpPrice"
        android:text="@string/add"/>

    <Button
        android:id="@+id/GrpExpenseUpdateBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/GrpExpenseAddBtn"
        android:text="@string/update"
        />
    <Button
        android:id="@+id/GrpExpenseDeleteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/GrpExpenseUpdateBtn"
        android:text="@string/delete"
        />

</androidx.constraintlayout.widget.ConstraintLayout>